# multi-turn-synthetic-conversation-generator

./: .gitignore  README.md  claude.md  guardrails.md  isbn.py  pyproject.toml  talk.txt
config/: batch.yml  defaults.yml  nami.yml  notes.txt
config/assistant/: assistant.yml  backup_nami_claude.yaml
config/nami/: nami.yml  nami_v0.yml  nami_v1.yml  sample.yml
config/scenarios/: rv01_camila.yml  rv02_rafael.yml  rv03_beatriz.yml  rv04_marcos.yml  rv05_luana.yml  rv06_thiago.yml  rv07_fernanda.yml  rv08_diego.yml  user.yml
docs/: comparacao_prompts.md  comparacao_prompts_diff.md
src/: exporter.py  generator.py  models.py  runner.py  server.py
src/web/: index.html
